--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "dependencies": {
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "mongoose": "^5.9.23"
+    "mongodb": "^5.6.0",
+    "mongoose": "^5.13.17"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
